# yzcli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
docs/: ServiceNameList.md  agent-cli-integration.md  agent-deployment-guide.md
docs/field-mapping/: absence.request_请假单_GZSXC18.md  absence.return.notification_销假单_GZSXC19.md  account.setup_开户账号_PJMCC01.md  account_会计科目_KJSKC02.md  accounting.voucher_会计凭证_KJSKC04.md  accounts.payable_应付账款开账_YSFFC01.md  accounts.receivable_应收账款开账_YSFSC01.md  approve.price_核价单_PURCC05.md  bank.account_开户账号_TPAGC36.md  bank.deposit.receipt_银行存提单_PJMCC02.md  bom_产品结构_SGMBC01.md  borrow.doc_借入单_INVJC01.md  borrow.return_借入还出单_INVJC02.md  business.trip.request_出差申请单_GZSXC21.md  cash.receipt.payment.voucher_现金收付单_PJMCC03.md  collection.doc_收款单_YSFSC03.md  commodity.combination_商品组合关系_TPAGC44.md  currency_币种汇率_TPAGC06.md  customer.item_客户品号_TPAGC11.md  customer_客户信息_TPAGC13.md  department_部门信息_TPAGC02.md  ecn_产品结构变更单_SGMBC03.md  employee.cash.advance.request_借款单_OASXC15.md  employee_人员信息_TPAGC47.md  entrust.settlement_委托结算单_COPSC07.md  excess.consumption.material.equisition_超耗领料单_SGMZC19.md  excess.material.requisition_超领单_SGMZC21.md  exchange.rate_每日汇率_TPAGC18.md  inquiry_询价单_PURCC01.md  (+81 more)
tests/: test_agent_command.py  test_agent_generate_map.py  test_agent_mapping.py  test_agent_models.py  test_agent_package_data.py  test_agent_runner.py  test_get_command.py
yzcli-agent-skill/: README.md  SKILL.md
yzcli-mcp/: DEPRECATED.md  package.json
(+206 files in other folders)
