[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yzcli"
version = "0.1.0"
authors = [
  { name="刘臣斌", email="liucb@digiwin.com" }
]
description = "易助ERP OpenAPI 命令行工具"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "click>=8.0",
  "requests>=2.28",
  "pyyaml>=6.0",
  "tabulate>=0.9",
  "pydantic>=2.0",
  "typing-extensions>=4.0",
]

[project.scripts]
yzcli = "yzcli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yzcli = ["data/*.yaml"]
